--- a/ecocare/src/App.css
+++ b/ecocare/src/App.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 .App {
   text-align: center;
   background-image: url("./images/forest2.jpg");
   background-size: cover;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .top-section{
@@ -14,8 +17,20 @@
   color: white;
 }
 
+.top-section h1{
+  font-size: 6vw;
+  margin: 0;
+}
+
+.top-section h2{
+  font-size: 2.3vw;
+  font-family: 'Roboto';
+  font-weight: 100;
+  margin: -1vw;
+}
+
 .logo{
-  width: 50%;
+  width: 25%;
 }
 
 .page-links{
