--- a/ecocare/src/App.css
+++ b/ecocare/src/App.css
@@ -8,9 +8,17 @@
   height: 100vh;
   overflow-x: hidden;
 }
+.layer{
+  background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
 
 .top-section{
-  padding-top: 20px;
+  padding-top: 50px;
   width: 100%;
   height: 50%;
   font-family: sans-serif;
@@ -18,21 +26,56 @@
 }
 
 .top-section h1{
-  font-size: 6vw;
+  font-size: 115px;
   margin: 0;
 }
 
 .top-section h2{
-  font-size: 2.3vw;
+  font-size: 40px;
   font-family: 'Roboto';
   font-weight: 100;
   margin: -1vw;
 }
 
 .logo{
-  width: 25%;
+  width: 500px;
 }
 
 .page-links{
   display: flex;
+  width: 100vw;
+  height: 40vh;
+  justify-content: center;
+  align-items: flex-end;
+  color: white;
+}
+
+@media (max-width: 870px){
+  .page-links{
+    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .logo{
+    width: 250px;
+  }
+  
+  .top-section h1{
+  font-size: 60px;
+  }
+
+  .top-section h2{
+  font-size: 23px;
+  }
+
+  .App{
+    height:1000px;
+  }
+  .layer{
+    height:1000px;
+  }
+  .top-section{
+    height: 410px;
+  }
 }
