--- a/ecocare/src/pages/css/Home.css
+++ b/ecocare/src/pages/css/Home.css
@@ -3,7 +3,7 @@
 html{
   overflow-x: hidden;
 }
-.App {
+.Home {
   text-align: center;
   background-image: url("../../images/forest2.jpg");
   background-size: cover;
