--- a/ecocare/src/pages/css/Mission.css
+++ b/ecocare/src/pages/css/Mission.css
@@ -1,11 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 .mission{
-    background-color: #D8FFD9;
+    font-family: 'Roboto';
+    background-image: url(../../images/page-bg.jpg);
     width: 100vw;
-    height: 100vh;
+    text-align: center;
 }
 
-.top-nav{
-    width: 100vw;
-    height: 70px;
-    background-color: #284113;
+.line{
+    width: 400px;
+    height: 2px;
+    margin: auto;
+    background-color: black;
+}
+
+.first-section{
+    width: 60vw;
+    margin: auto;
+}
+
+.mission h1{
+    font-size: 60px;
+    margin-bottom: 10px;
+}
+
+.mission h2{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+.mission p{
+    font-size: 25px;
+}
+
+.image1{
+    margin: auto;
+    background-image: url(../../images/monkey.jpg);
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+}
+
+.second-section{
+    display: flex;
+    width: 40vw;
+    margin: auto;
+}
+
+.second-section p{
+    margin-top: 0;
+    flex: 3;
+    text-align: left;
+}
+
+.image2{
+    background-image: url(../../images/lion.jpg);
+    flex: 2;
+    height: 600px;
+    margin-bottom: 50px;
+    background-size: cover;
+    background-position: center;
 }
