Fixed responsiveness on contact page

--- a/ecocare/src/pages/css/ContactPage.css
+++ b/ecocare/src/pages/css/ContactPage.css
@@ -8,6 +8,10 @@
     text-align: center;
 }
 
+h1{
+    font-size: 50px;
+}
+
 .line{
     width: 400px;
     height: 2px;
@@ -21,7 +25,6 @@ form{
     margin: auto;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
 }
 
 .txtinput{
@@ -61,81 +64,33 @@ form{
 }
 
 
-.first-section{
-    width: 60vw;
-    margin: auto;
-}
-
-.mission h1{
-    font-size: 60px;
-    margin-bottom: 10px;
-}
-
-.mission h2{
-    font-size: 40px;
-    font-weight: 600;
-    margin-top: 40px;
-}
-
-.mission p{
-    font-size: 25px;
-}
-
-.image1{
-    margin: auto;
-    background-image: url(../../images/monkey.jpg);
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-}
-
-.second-section{
-    display: flex;
-    width: 70vw;
-    margin: auto;
-}
-
-.second-section p{
-    margin-top: 0;
-    flex: 1.5;
-    text-align: left;
-}
-
-.image2{
-    background-image: url(../../images/lion.jpg);
-    flex: 1;
-    height: 600px;
-    margin-bottom: 50px;
-    background-size: cover;
-    background-position: center;
-}
-
-@media (max-width: 900px){
-    .mission h1{
+@media (max-width: 480px){
+    h1{
         font-size: 8vw;
     }
-
     .line{
         width: 70vw;
     }
     
-    .mission h2{
-        font-size: 5vw;
+    .txtinput{
+        margin-bottom: 2vw;
+        margin-top: 2vw;
+        width: 80vw;
+        height: 15vw;
+        font-size: 7vw;
     }
-
-    .first-section p{
-        font-size: 3.2vw;
+    #message{
+        margin-bottom: 5vw;
+        margin-top: 5vw;
+        width: 80vw;
+        height: 50vw;
+        font-size: 6vw;
     }
-
-    .second-section{
-      width: 95vw;
+    #submit{
+        width: 30vw;
+        height: 20vw;
+        font-size: 8vw;
+        margin-left: 52vw;
     }
-
-    .second-section p{
-        font-size: 3.2vw;
-    }
-
-    .image2{
-        height: 100vw;
-    }
+    
 }
