--- a/ecocare/src/components/css/page-link.css
+++ b/ecocare/src/components/css/page-link.css
@@ -38,7 +38,7 @@ a{
 
 .page-link-img{
     margin: auto;
-    width: 220px;
+    width: 180px;
 }
 
 @media (max-width: 870px){
@@ -46,6 +46,10 @@ a{
         width: 250px;
         height: 350px;
         margin-bottom: 20px;
+    }
+    .page-link-container h1{
+        font-size: 40px;
+    
     }
   
   }
