--- a/ecocare/src/pages/css/Team.css
+++ b/ecocare/src/pages/css/Team.css
@@ -28,6 +28,13 @@ h1{
     justify-content: center;
 }
 
+.row{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-bottom: 30px;
+}
+
 
 @media (max-width: 480px){
     h1{
