Found out how to parse data through links, completed dynamic employee page and styling

--- a/ecocare/src/components/css/Nav.css
+++ b/ecocare/src/components/css/Nav.css
@@ -13,9 +13,12 @@
     align-items: center;
 }
 
+
+
 .nav-link{
     padding-left: 20px;
     transition: 0.2s;
+    color: white;
 }
 .nav-link:hover{
     font-size: 35px;
