--- a/ecocare/src/components/css/page-link.css
+++ b/ecocare/src/components/css/page-link.css
@@ -19,6 +19,7 @@ a{
     margin: 0 1vw 0 1vw;
     transition: 0.2s;
     font-family: 'Roboto';
+    color: white;
 }
 .page-link-container:hover{
     background-color: rgb(0, 0, 0, 0.5);
